# hyprkit

./: .gitignore  Cargo.toml  README.md  hyprkit.sh
backup/: git-placeholder
dotfiles/auroran-neon/: theme.toml
dotfiles/auroran-neon/Kvantum/: Kvantum
dotfiles/auroran-neon/assets/: sonic-drowning.opus
dotfiles/auroran-neon/gtk-3.0/: gtk-3.0  settings.ini
dotfiles/auroran-neon/gtk-4.0/: gtk-4.0  settings.ini
dotfiles/auroran-neon/hypr/: hypr  hyprland.conf
dotfiles/auroran-neon/hypr/config/: animations.conf  autostart.conf  colors.conf  decorations.conf  defaults.conf  environment.conf  keybinds.conf  (+3 more)
dotfiles/auroran-neon/mako/: mako
dotfiles/auroran-neon/qt5ct/: qt5ct  qt5ct.conf
dotfiles/auroran-neon/swaylock/: swaylock
dotfiles/auroran-neon/waybar/: README.md  config  style.css  waybar
dotfiles/auroran-neon/wlogout/: style.css  wlogout
dotfiles/auroran-neon/wofi/: style.css  wofi
dotfiles/cachyos/gtk-3.0/: settings.ini
dotfiles/ml4w/ohmyposh/: EDM115-newline.omp.json
dotfiles/ml4w/waybar/: colors.css
scripts/: set-theme.sh
src/: constants.rs  file_ops.rs  lib.rs  main.rs  tests.rs  theme_ops.rs  tui.rs
src/api/: mod.rs
src/config/: mod.rs  paths.rs
src/file_ops/: constants.rs  mod.rs  tests.rs
src/theme/: mod.rs
src/themes/: constants.rs  mod.rs
src/themes/theme_state/: constants.rs  mod.rs  tests.rs
src/tui/: constants.rs  mod.rs
themes/auroran-neon/: theme.toml
themes/cachyos/: theme.toml
themes/cachyos/gtk-4.0/: gtk-dark.css  gtk.css
themes/ml4w/ohmyposh/: colors.json
themes/ml4w/waypaper/: config.ini
(+36 files in other folders)
